--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -35,6 +35,8 @@
   line-height: 2;
   color: #444444;
   margin-top: 26px;
+  position: relative;
+  z-index: 1000;
 }
 
 .contacts__char {
@@ -61,6 +63,15 @@
   padding-bottom: 5px;
 }
 
+.contacts__email:hover,
+.contacts__email:focus {
+  color: #46c1ae;
+}
+
+.contacts__email:active {
+  opacity: 0.3;
+}
+
 .contacts__img {
   margin: 0 auto;
   position: absolute;
@@ -72,6 +83,7 @@
 .contacts__map {
   position: relative;
   height: 457px;
+  z-index: 100;
 }
 
 .contacts__map::before {
@@ -102,6 +114,18 @@
   margin-left: 30px;
   margin-top: 39px;
   margin-right: 30px;
+  position: relative;
+  z-index: 1000;
+}
+
+.contacts__button:focus,
+.contacts__button:hover {
+  background-color: #444444;
+  color: #ffffff;
+}
+
+.contacts__button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .contacts__socials {
@@ -126,6 +150,16 @@
 .contacts__icon {
   justify-content: center;
   align-items: center;
+}
+
+.contacts__icon:hover path,
+.contacts__icon:focus path {
+  fill: #46c1ae;
+}
+
+.contacts__icon:active path {
+  fill: #46c1ae;
+  opacity: 0.3;
 }
 
 .contacts__img--tablet,
@@ -153,6 +187,16 @@
 
   .contacts__logo {
     display: block;
+  }
+
+  .contacts__logo:hover,
+  .contacts__logo:focus {
+    fill: #46c1ae;
+  }
+
+  .contacts__logo:active {
+    fill: #46c1ae;
+    opacity: 0.3;
   }
 
   .contacts__link {
