--- a/source/sass/blocks/develop.scss
+++ b/source/sass/blocks/develop.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 30px;
+  padding-bottom: 18px;
 }
 
 .develop__title {
@@ -31,6 +31,30 @@
 .develop__picture {
   padding-top: 24px;
 }
+
+.develop:hover .develop__link path {
+  fill: #46c1ae;
+}
+
+.develop:focus .develop__link path {
+  fill: #46c1ae;
+}
+
+// .develop:active .develop__link path {
+//   fill: #46c1ae;
+//   opacity: 0.3;
+// }
+
+.develop:active .develop__title {
+  opacity: 0.3;
+}
+
+.develop:active .develop__link path {
+  opacity: 0.3;
+}
+// .develop__title:active {
+//   opacity: 0.3;
+// }
 
 @media (min-width: 768px) {
   .develop {
