--- a/source/sass/blocks/form-main.scss
+++ b/source/sass/blocks/form-main.scss
@@ -75,6 +75,7 @@
 
 .form-main__connect--email {
   padding-top: 6px;
+  position: relative;
 }
 
 
@@ -134,9 +135,16 @@
   position: relative;
 }
 
-.form-main__label:hover::before {
+.form-main__label:hover::before,
+.form-main__label:focus::before {
   border: 2px solid #62d1ba;
 }
+
+.form-main__label:active::before {
+  border: 2px solid #444444;
+  opacity: 0.3;
+}
+
 
 .form-main__label::before {
   position: absolute;
@@ -196,8 +204,14 @@
   border: 2px solid #444444;
 }
 
-.form-main__label-chbx:hover::before {
+.form-main__label-chbx:hover::before,
+.form-main__label-chbx:focus::before {
   border: 2px solid #62d1ba;
+}
+
+.form-main__label-chbx:active::before {
+  border: 2px solid #444444;
+  opacity: 0.3;
 }
 
 .form-main__input:focus + .form-main__label-chbx::before {
@@ -239,7 +253,7 @@
   line-height: 1.06;
   letter-spacing: normal;
   text-align: left;
-  color: rgba(68, 68, 68, 0.3);
+  // color: rgba(68, 68, 68, 0.3);
   margin: 0;
   padding: 13px 0;
   margin-bottom: 20px;
@@ -256,6 +270,22 @@
 
 .form-main__input--email {
   padding-top: 19px;
+}
+
+.form-main__input--tel:hover,
+.form-main__input--tel:focus {
+  border-bottom: solid 2px #62d1ba;
+}
+
+.form-main__input--tel:active {
+  border-bottom: solid 2px #62d1ba;
+  color: #444444;
+}
+
+.form-main__input--email:hover,
+.form-main__input--email:focus,
+.form-main__input--email:active {
+  border-bottom: solid 2px #62d1ba;
 }
 
 .form-main__contacts--tel {
@@ -310,6 +340,18 @@
   line-height: 1.06;
   letter-spacing: normal;
   text-align: left;
+  color: rgba(68, 68, 68, 0.3);
+}
+
+.form-main__textarea:hover,
+.form-main__textarea:focus {
+  border: solid 2px #62d1ba;
+}
+
+.form-main__textarea:active {
+  border: solid 2px #62d1ba;
+  color: red;
+  opacity: 1;
 }
 
 .form-main__cite {
@@ -342,6 +384,16 @@
   margin-bottom: 16px;
 }
 
+.form-main__button:focus,
+.form-main__button:hover {
+  background-color: #444444;
+  color: #ffffff;
+}
+
+.form-main__button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .form-main__input--colors {
   width: 150px;
 }
@@ -359,8 +411,78 @@
   font-size: 27px;
 }
 
+.form-main__input--name:hover,
+.form-main__input--name:focus {
+  border-bottom: solid 2px #62d1ba;
+}
+
+.form-main__input--name:active {
+  border-bottom: solid 2px #62d1ba;
+  color: rgba(68, 68, 68, 1);
+}
+
+.form-main__connect--tel {
+  position: relative;
+}
+
+.form-main__phone-icon {
+  position: absolute;
+  right: 37px;
+  top: 42px;
+  opacity: 0.2;
+}
+
+.form-main__email-icon {
+  position: absolute;
+  right: 31px;
+  top: 42px;
+}
+
+.form-main__input--tel:hover + .form-main__phone-icon {
+  opacity: 1;
+  fill: #62d1ba;
+}
+
+.form-main__input--tel:active + .form-main__phone-icon {
+  fill: #62d1ba;
+  opacity: 1;
+}
+//
+.form-main__email-icon path {
+  opacity: 0.2;
+}
+
+.form-main__input--email:hover + .form-main__email-icon path {
+  opacity: 1;
+  fill: #62d1ba;
+}
+
+.form-main__input--email:active + .form-main__email-icon path {
+  fill: #62d1ba;
+  opacity: 1;
+}
+
+.form-main__input,
+.form-main__textarea {
+  color: #444444;
+}
+
+.form-main__input::placeholder,
+.form-main__textarea::placeholder {
+  color: rgba(68, 68, 68, 0.3);
+}
 
 @media (min-width: 768px) {
+  .form-main__phone-icon {
+    right: 75px;
+    top: 59px;
+  }
+
+  .form-main__email-icon {
+    right: 72px;
+    top: 13px;
+  }
+
   .form-main__button {
     margin-top: -64px;
     display: block;
@@ -635,6 +757,16 @@
 }
 
 @media (min-width: 1150px) {
+  .form-main__phone-icon {
+    right: 236px;
+    top: 60px;
+  }
+
+  .form-main__email-icon {
+    right: 228px;
+    top: 15px;
+  }
+
   .form-main__cite {
     padding-top: 58px;
     padding-left: 625px;
