--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -93,6 +93,16 @@
   display: inline-block;
 }
 
+.offer__button:focus,
+.offer__button:hover {
+  background-color: #444444;
+  color: #ffffff;
+}
+
+.offer__button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .offer__image--desktop {
   display: none;
 }
