--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -67,6 +67,65 @@
   padding-bottom: 30px;
 }
 
+// .range__item:hover {
+//   transform: translateY(-5px);
+//   padding-bottom: 30px;
+// }
+
+.range__item--inter:hover {
+  transform: translateY(-5px);
+  position: relative;
+  background-color: #59d5bc;
+}
+
+.range__item--inter:hover::before {
+  background-color: #59d5bc;
+  content: "";
+  position: absolute;
+  // width: 525px;
+  height: 26px;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+}
+
+.range__item--inter:active {
+  background-color: #59d5bc;
+}
+
+.range__item:hover::after {
+  opacity: 0.7;
+}
+
+// .range__text:active {
+//   opacity: 0.3;
+// }
+// .range__item:active {
+//   opacity: 0.3;
+// }
+
+.range__item:active::after,
+.range__item:active .range__text {
+  opacity: 0.3;
+}
+
+.range__item--toys:hover {
+  transform: translateY(-5px);
+  position: relative;
+  background-color: #46c1ae;
+}
+
+.range__item--toys:hover::before {
+  background-color: #46c1ae;
+  content: "";
+  position: absolute;
+  // width: 525px;
+  height: 26px;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+}
+
 .range__text {
   display: block;
   width: 110px;
